<resources>
    <string name="app_name" translatable="false">HYDROS</string>
    <string name="splashscreen" translatable="false">Splash Screen</string>
    <string name="detail" translatable="false">Detail</string>
    <string name="image" translatable="false">Image</string>

    <string name="title_page1">The Great Idea</string>
    <string name="title_page2">One Step to Go</string>
    <string name="title_page3">Make World Better</string>
    <string name="title_page4">Let\'s Get Started!</string>
    <string name="desc_page1">Welcome to Hydros, an application dedicated to detecting diseases in hydroponic plants and making the world a better place.</string>
    <string name="desc_page2">With Hydros, we strive to improve the health of hydroponic plants by providing accurate and efficient disease detection.</string>
    <string name="desc_page3">Join us on this journey as we work together to create a healthier and happier world.</string>

    <string name="skip">Skip</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>

    <string name="login">Login</string>
    <string name="to_reg">New user? Register Now!</string>
    <string name="register">Register</string>
    <string name="to_log">Already have an account? Login Now!</string>
    <string name="name">Your Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>

    <string name="warn_field">Field cannot be empty</string>
    <string name="warn_email_exists">Email is already taken.</string>
    <string name="warn_email_customize">Email invalid</string>
    <string name="warn_password_customize">8-character password with digits and letters</string>
    <string name="warn_invalid_login">Please check your data.</string>

    <string name="msg_title">Yeay!</string>
    <string name="msg_text_register">Your account has been created. Let\'s login and start exploring with us!</string>
    <string name="msg_text_login">You have successfully logged in! Excited to start exploring?</string>
    <string name="msg_button">Go</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="Analysis">Analysis</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload Photo</string>
    <string name="choose_plant">Choose your plant</string>

    <string-array name="plant">
        <item>Spinach</item>
        <item>Kangkong</item>
        <item>Lettuce</item>
        <item>Bok choy</item>
        <item>Mustard greens</item>
        <item>Tomato</item>
        <item>Chili pepper</item>
        <item>Strawberry</item>
        <item>Cucumber</item>
    </string-array>

    <string name="permission_denied">Permission Denied</string>

    <string name="date">dd/mm/yy</string>
    <string name="status_ok">Oops, your plant needs some love</string>
    <string name="status_no">Yeay, it is wonderful plant</string>

    <string name="search">Search your plant</string>
    <string name="empty_item">You haven\'t analyzed any plants yet!</string>

    <string name="home" translatable="false">Home</string>
    <string name="analysis">Analysis</string>
    <string name="logout">Logout</string>
    <string name="preferences">Preferences</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>

    <string name="upload_success">Photo uploaded successfully</string>
    <string name="upload_failed">Failed to upload photo</string>
    <string name="select_plant">Please select a plant</string>
    <string name="select_image">Please select an image</string>

    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer efficitur luctus libero, id semper arcu ullamcorper eget. Suspendisse lacinia, nisl ut porttitor rhoncus, ante eros euismod nulla, et venenatis odio nunc vitae tortor. Maecenas ac dictum lectus, at pulvinar ipsum. Fusce non tristique arcu. Aenean faucibus maximus augue, quis vestibulum tellus porttitor sed. Ut sit amet enim non enim efficitur placerat vel eu libero. Donec mi mauris, egestas ut consectetur sed, auctor et tellus. Curabitur dignissim elit nec vestibulum ultricies. Duis egestas, eros eget maximus hendrerit, est purus euismod risus, in tincidunt ex ipsum et mauris. Cras consectetur nunc pretium metus dictum mollis. Nunc quis sem vitae nisi lacinia dapibus sed nec ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque id urna rhoncus quam sagittis sagittis. Phasellus mollis, est sed mattis viverra, tortor erat ultricies justo, nec semper nisl tortor sit amet purus. Vestibulum vulputate ac sapien nec fringilla. Integer ac tempus nunc. Ut finibus, felis quis porta rhoncus, risus lectus eleifend eros, eu vehicula eros lectus sit amet tellus. Morbi lacus tellus, facilisis sit amet felis eget, efficitur commodo est. Nam rhoncus sodales sapien sed scelerisque. Fusce maximus urna nibh, et suscipit nulla bibendum at.</string>
</resources>