<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_analysis"
        android:icon="@drawable/ic_menu_analysis"
        android:title="@string/analysis" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/logout" />

    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_menu_language"
                android:title="@string/language" />
            <item
                android:id="@+id/nav_dark_mode"
                android:icon="@drawable/ic_menu_dark_mode"
                android:title="@string/dark_mode"
                app:actionLayout="@layout/dark_mode_layout" />
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>