<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ed_register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ed_register_name"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:alpha="0"
        android:src="@drawable/lets_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_register_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidth="2dp"
        android:alpha="0"
        android:layout_marginTop="16dp"
        android:paddingBottom="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@drawable/ic_user">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:isEmail="true"
            android:paddingEnd="40dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:maxLength="8"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidth="2dp"
        android:alpha="0"
        android:paddingBottom="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
        app:startIconDrawable="@drawable/ic_user_email">

        <com.dicoding.picodiploma.hydros.CustomEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:isEmail="true"
            android:paddingEnd="40dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidth="2dp"
        android:alpha="0"
        android:paddingBottom="12dp"
        android:layout_width="0dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
        app:startIconDrawable="@drawable/ic_user_password">

        <com.dicoding.picodiploma.hydros.CustomEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:isPassword="true"
            android:paddingEnd="40dp"
            app:minLength="8"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@id/ed_register_password"
        app:layout_constraintStart_toStartOf="@id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_log"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>