<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.analysis.AnalysisActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layerType="hardware"
        android:visibility="gone"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/previewImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/previewImageView"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_plants"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:focusableInTouchMode="true"
        android:hint="@string/choose_plant"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/dropdown_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_plants"
        app:srcCompat="@drawable/ic_upload_photo_holder" />

    <Button
        android:id="@+id/cameraButton"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintStart_toStartOf="@+id/previewImageView"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <Button
        android:id="@+id/galleryButton"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toTopOf="@+id/cameraButton" />

    <Button
        android:id="@+id/uploadButton"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
        app:layout_constraintStart_toStartOf="@+id/previewImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>